// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetSelectorButton renders correctly 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Want to buy
  </Text>,
  <TouchableOpacity
    accessible={false}
    disabled={true}
  >
    <View
      style={
        [
          {
            "borderColor": "#b7bbc8",
            "borderRadius": 8,
            "borderWidth": 1.5,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View>
        <View
          accessibilityRole="none"
          accessible={true}
          style={
            {
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "flex": -1,
                }
              }
              testID="listitemcolumn"
            >
              <Image
                source={
                  {
                    "uri": "https://example.com/token.png",
                  }
                }
              />
            </View>
            <View
              accessible={false}
              style={
                {
                  "width": 16,
                }
              }
              testID="listitem-gap"
            />
            <View
              style={
                {
                  "flex": 1,
                }
              }
              testID="listitemcolumn"
            >
              <Text
                accessibilityRole="text"
                adjustsFontSizeToFit={true}
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Medium",
                    "fontSize": 18,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Ethereum
              </Text>
            </View>
            <View
              accessible={false}
              style={
                {
                  "width": 16,
                }
              }
              testID="listitem-gap"
            />
            <View
              style={
                {
                  "flex": -1,
                }
              }
              testID="listitemcolumn"
            >
              <View>
                <Text
                  style={
                    [
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 30,
                        "marginVertical": 2,
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#121314",
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#121314",
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#121314",
                          "fontFamily": "Geist Regular",
                          "fontSize": 30,
                          "marginVertical": 2,
                        },
                        undefined,
                        undefined,
                        {
                          "fontFamily": "Geist Bold",
                        },
                        undefined,
                        {
                          "color": "#121314",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        {
                          "color": "#121314",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                      ]
                    }
                  >
                    ETH
                  </Text>
                    
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": undefined,
                          "fontSize": 16,
                        },
                        {
                          "color": "#121314",
                          "marginLeft": 10,
                        },
                        {
                          "fontFamily": "Entypo",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </TouchableOpacity>,
]
`;

exports[`AssetSelectorButton renders correctly without icon 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Want to buy
  </Text>,
  <TouchableOpacity
    accessible={false}
    disabled={true}
  >
    <View
      style={
        [
          {
            "borderColor": "#b7bbc8",
            "borderRadius": 8,
            "borderWidth": 1.5,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View>
        <View
          accessibilityRole="none"
          accessible={true}
          style={
            {
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
              testID="listitemcolumn"
            >
              <Text
                accessibilityRole="text"
                adjustsFontSizeToFit={true}
                numberOfLines={1}
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Medium",
                    "fontSize": 18,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Ethereum
              </Text>
            </View>
            <View
              accessible={false}
              style={
                {
                  "width": 16,
                }
              }
              testID="listitem-gap"
            />
            <View
              style={
                {
                  "flex": -1,
                }
              }
              testID="listitemcolumn"
            >
              <View>
                <Text
                  style={
                    [
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 30,
                        "marginVertical": 2,
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#121314",
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#121314",
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "color": "#121314",
                          "fontFamily": "Geist Regular",
                          "fontSize": 30,
                          "marginVertical": 2,
                        },
                        undefined,
                        undefined,
                        {
                          "fontFamily": "Geist Bold",
                        },
                        undefined,
                        {
                          "color": "#121314",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        {
                          "color": "#121314",
                        },
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                      ]
                    }
                  >
                    ETH
                  </Text>
                    
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": undefined,
                          "fontSize": 16,
                        },
                        {
                          "color": "#121314",
                          "marginLeft": 10,
                        },
                        {
                          "fontFamily": "Entypo",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </TouchableOpacity>,
]
`;

exports[`AssetSelectorButton renders loading state correctly 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Want to buy
  </Text>,
  <TouchableOpacity
    accessible={false}
    disabled={true}
  >
    <View
      style={
        [
          {
            "borderColor": "#b7bbc8",
            "borderRadius": 8,
            "borderWidth": 1.5,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View>
        <View
          accessibilityRole="none"
          accessible={true}
          style={
            {
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "flex": -1,
                }
              }
              testID="listitemcolumn"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "backgroundColor": "#f3f5f9",
                      "borderRadius": 9999,
                      "height": 40,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 40,
                    },
                    undefined,
                  ]
                }
              />
            </View>
            <View
              accessible={false}
              style={
                {
                  "width": 16,
                }
              }
              testID="listitem-gap"
            />
            <View
              style={
                {
                  "flex": 1,
                }
              }
              testID="listitemcolumn"
            >
              <View
                style={
                  [
                    {
                      "backgroundColor": "#f3f5f9",
                      "borderRadius": 30,
                      "padding": 14,
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    {
                      "width": "30%",
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              />
            </View>
            <View
              accessible={false}
              style={
                {
                  "width": 16,
                }
              }
              testID="listitem-gap"
            />
            <View
              style={
                {
                  "flex": -1,
                }
              }
              testID="listitemcolumn"
            >
              <View
                style={
                  [
                    {
                      "backgroundColor": "#f3f5f9",
                      "borderRadius": 30,
                      "padding": 14,
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    {
                      "width": "30%",
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </TouchableOpacity>,
]
`;
